--- a/Exercises/Exercises.vcxproj.filters
+++ b/Exercises/Exercises.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Parameter.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Fraction.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BinaryTree.cpp">
@@ -45,6 +48,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Parameter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Fraction.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
