--- a/Exercises/Exercises.vcxproj.filters
+++ b/Exercises/Exercises.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Fraction.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Statistics.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BinaryTree.cpp">
@@ -51,6 +54,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Fraction.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Statistics.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
